bk_ida/gccida/c1/swap_rtx_condition
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1707:4: error: expected ';' after expression
rtx flags_user; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1707:5: error: use of undeclared identifier 'flags_user'
rtx flags_user; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1711:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1711:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1717:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1723:1: error: use of undeclared identifier 'flags_user'
flags_user = next_flags_user( insn); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1724:7: error: use of undeclared identifier 'flags_user'
if ( !flags_user ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1726:7: error: use of undeclared identifier 'flags_user'
rtx = flags_user; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1727:16: error: use of undeclared identifier 'flags_user'
v2 = ( __int64)flags_user[2]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1747:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)rtx[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1753:1: error: use of undeclared identifier 'v8'
v8 = next_flags_user( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1754:6: error: use of undeclared identifier 'v8'
if ( v8 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1756:7: error: use of undeclared identifier 'v8'
rtx = v8; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1757:16: error: use of undeclared identifier 'v8'
v2 = ( __int64)v8[2]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1772:34: error: expected ')'
if ( swap_rtx_condition_1( ( rtx)v2) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1772:26: note: to match this '('
if ( swap_rtx_condition_1( ( rtx)v2) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1779:29: error: expected ')'
swap_rtx_condition_1( ( rtx)v2); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/reg-stack.c:1779:21: note: to match this '('
swap_rtx_condition_1( ( rtx)v2); 
                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_rtx_condition/src/obj/reg-stack.o] Error 1
